# vatagina_e_e

prj.test/: rational_test.cpp
rational/prj.lab/rational/: rational.cpp
rational/prj.lab/rational/include/rational/: rational.hpp
rational/prj.test/: rational_test.cpp
vatagina_e_e/: CMakeLists.txt  rational.cpp  rational.h
vatagina_e_e/prj.cw/: CMakeLists.txt  Doxyfile  Ватагина_Екатерина_БПМ_22_3.txt
vatagina_e_e/prj.cw/CTikz/: CMakeLists.txt
vatagina_e_e/prj.cw/CTikz/ctikz/: CMakeLists.txt  ctikz.cpp
vatagina_e_e/prj.cw/CTikz/ctikz/include/ctikz/: ctikz.hpp
vatagina_e_e/prj.cw/CTikz/examples/: CMakeLists.txt  example1.cpp  example1.tex  example2.cpp  example2.tex  example3.cpp  example3.tex
vatagina_e_e/prj.cw/ctikz/: CMakeLists.txt  Doc
vatagina_e_e/prj.cw/ctikz/ctikz/: CMakeLists.txt
vatagina_e_e/prj.cw/example/: CMakeLists.txt  example.cpp
vatagina_e_e/prj.cw/filter/: CMakeLists.txt  filter.cpp
vatagina_e_e/prj.cw/filter/filter/: filter.cpp
vatagina_e_e/prj.cw/filter/filter/include/filter/: filter.hpp
vatagina_e_e/prj.cw/filter/include/filter/: filter.hpp
vatagina_e_e/prj.lab/: CMakeLists.txt
vatagina_e_e/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
vatagina_e_e/prj.lab/arrayd/include/: arrayd.hpp
vatagina_e_e/prj.lab/arrayd/include/arrayd/: arrayd.hpp
vatagina_e_e/prj.lab/arrayt/: CMakeLists.txt
vatagina_e_e/prj.lab/arrayt/include/: arrayt.hpp
vatagina_e_e/prj.lab/arrayt/include/arrayt/: arrayt.hpp
vatagina_e_e/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
vatagina_e_e/prj.lab/matrixs/include/matrixs/: matrixs.hpp
vatagina_e_e/prj.lab/orto/: orto.cpp
vatagina_e_e/prj.lab/rational/: CMakeLists.txt  rational.cpp
vatagina_e_e/prj.lab/rational/include/rational/: rational.hpp
vatagina_e_e/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayd_test_doc.cpp  arrayt_test.cpp  arrayt_test_doc.cpp  my_arrayttest.cpp  rational_test_doc.cpp
vatagina_e_e/rational/: .build.bat
vatagina_e_e/rational/prj.lab/rational/: CMakeLists.txt  rational.cpp
vatagina_e_e/rational/prj.lab/rational/include/rational/: rational.h  rational.hpp
vatagina_e_e/rational/prj.test/: rational_test.cpp
